<resources>
    <string name="app_name">Digital Notes</string>
    <string name="courses">Courses</string>
    <string name="subjects">Subjects</string>
    <string name="modules">Modules</string>
    <string name="resources">Resources</string>
    <string name="sgpaCalculator">SGPA Calculator</string>
    <string name="videoPlay">VideoPlay</string>
    <string name="name">Name</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="usn">USN</string>
    <string name="college">College</string>
    <string name="alreadyAUser">Already a user - Login</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="changePhoneNumber">Change Phone Number</string>
    <string name="newToOurApp">New to our app - Sign Up</string>
    <string name="sem3">3rd Sem</string>
    <string name="sem4">4th Sem</string>
    <string name="sem5">5th Sem</string>
    <string name="sem6">6th Sem</string>
    <string name="sem7">7th Sem</string>
    <string name="sem8">8th Sem</string>
    <string name="allSem">All Sem</string>
    <string name="semester">Semester</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search(Subject Name)</string>
    <string name="ok">OK</string>
    <string name="code">Code:</string>
    <string name="credits">Credits:</string>
    <string name="module">Module:</string>
    <string name="tryAgain">TryAgain</string>
    <string name="syllabus">Syllabus:</string>
    <string name="title">Title:</string>
    <string name="type">Type:</string>
    <string name="branch">Branch</string>
    <string name="branch_semicolon">Branch:</string>
    <string name="semester_semicolon">Sem:</string>
    <string name="subject_semicolon">Subject:</string>
    <string name="related_semicolon">Related Topic:</string>
    <string name="viewVideo">View Video</string>
    <string name="notes">Notes</string>
    <string name="quizzer">Quizzer</string>
    <string name="time_table">Timer</string>
    <string name="result">Result</string>
    <string name="tips">Tips</string>
    <string name="sgpaCalu">SGPA</string>
    <string name="books">Books</string>
    <string name="videos">Videos</string>
    <string name="complaints">Review</string>
    <string name="view">View</string>
    <string name="download">Download</string>
    <string name="vtu4u">Vtu4u Result</string>
    <string name="vtuResult">VTU Official Website</string>
    <string name="checkResult">Check Result</string>
    <string name="resultOf4XX19ISXXX">You can directly view result Of 4XX19ISXXX</string>
    <string name="viewResultOf4XX19ISXXX">View result Of 4XX19ISXXX</string>
    <string name="calculateSGPA">Calculate SGPA</string>
    <string name="reset">Reset</string>
    <string name="marks">Marks</string>
    <string name="total">Total:</string>
    <string name="percentage">Percentage:</string>
    <string name="sgpa">SGPA:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="semFilter">
        <item name="allSem">All Sem</item>
        <item name="sem3">3rd Sem</item>
        <item name="sem4">4th Sem</item>
        <item name="sem5">5th Sem</item>
        <item name="sem6">6th Sem</item>
        <item name="sem7">7th Sem</item>
        <item name="sem8">8th Sem</item>
    </string-array>
    <string-array name="AllSem">
        <item name="sem1">1st Sem</item>
        <item name="sem2">2nd Sem</item>
        <item name="sem3">3rd Sem</item>
        <item name="sem4">4th Sem</item>
        <item name="sem5">5th Sem</item>
        <item name="sem6">6th Sem</item>
        <item name="sem7">7th Sem</item>
        <item name="sem8">8th Sem</item>
    </string-array>
    <string-array name="AllBranch">
        <item name="ai">AI</item>
        <item name="bio">BT</item>
        <item name="cs">CS</item>
        <item name="cv">CV</item>
        <item name="ec">EC</item>
        <item name="ee">EE</item>
        <item name="ei">EI</item>
        <item name="is">IS</item>
        <item name="me">ME</item>
        <item name="tx">TX</item>
    </string-array>
    <string-array name="FirstYear">
        <item name="phy">Physics Cycle</item>
        <item name="che">Chemistry Cycle</item>
    </string-array>
    <string name="mat11">18MAT11 :</string>
    <string name="che12">18CHE12 :</string>
    <string name="cpc13">18CPC13 :</string>
    <string name="eln14">18ELN14 :</string>
    <string name="me15">18ME15 :</string>
    <string name="chel16">18CHEL16 :</string>
    <string name="cpcl17">18CPCL17 :</string>
    <string name="che22">18CHE22 :</string>
    <string name="cpc23">18CPC23 :</string>
    <string name="eln24">18ELN24 :</string>
    <string name="me25">18ME25 :</string>
    <string name="chel26">18CHEL26 :</string>
    <string name="cpcl27">18CPCL27 :</string>
    <string name="phy12">18PHY12 :</string>
    <string name="ele13">18ELE13 :</string>
    <string name="civ14">18CIV14 :</string>
    <string name="egdl15">18EGDL15 :</string>
    <string name="phyl16">18PHYL16 :</string>
    <string name="elel17">18ELEL17 :</string>
    <string name="egh18">18EGH18 :</string>
    <string name="mat21">18MAT21 :</string>
    <string name="phy22">18PHY22 :</string>
    <string name="ele23">18ELE23 :</string>
    <string name="civ24">18CIV24 :</string>
    <string name="egdl25">18EGDL25 :</string>
    <string name="phyl26">18PHYL26 :</string>
    <string name="elel27">18ELEL27 :</string>
    <string name="egh28">18EGH28 :</string>
    <string name="mat31">18MAT31 :</string>
    <string name="ec32">18EC32 :</string>
    <string name="ec33">18EC33 :</string>
    <string name="ec34">18EC34 :</string>
    <string name="ec35">18EC35 :</string>
    <string name="ec36">18EC36 :</string>
    <string name="ecl37">18ECL37 :</string>
    <string name="ecl38">18ECL38 :</string>
    <string name="xx39">18XXX39 :</string>
    <string name="ec42">18EC42 :</string>
    <string name="ec43">18EC43 :</string>
    <string name="ec44">18EC44 :</string>
    <string name="ec45">18EC45 :</string>
    <string name="ec46">18EC46 :</string>
    <string name="ecl47">18ECL47 :</string>
    <string name="ecl48">18ECL48 :</string>
    <string name="xx49">18XXX49 :</string>
    <string name="es51">18ES51 :</string>
    <string name="ec52">18EC52 :</string>
    <string name="ec53">18EC53 :</string>
    <string name="ec54">18EC54 :</string>
    <string name="ec55">18EC55 :</string>
    <string name="ec56">18EC56 :</string>
    <string name="ecl57">18ECL57 :</string>
    <string name="ecl58">18ECL58 :</string>
    <string name="civ59">18CIV59 :</string>
    <string name="ec61">18EC61 :</string>
    <string name="ec62">18EC62 :</string>
    <string name="ec63">18EC63 :</string>
    <string name="xx64x">18XX64X :</string>
    <string name="xx65x">18XX65X :</string>
    <string name="ecl66">18ECL66 :</string>
    <string name="ecl67">18ECL67 :</string>
    <string name="ecmp68">18ECMP68 :</string>
    <string name="ec71">18EC71 :</string>
    <string name="ec72">18EC72 :</string>
    <string name="xx73x">18XX73X :</string>
    <string name="xx74x">18XX74X :</string>
    <string name="xx75x">18XX75X :</string>
    <string name="ecl76">18ECL76 :</string>
    <string name="ecl77">18ECL77 :</string>
    <string name="ecp78">18ECP78 :</string>
    <string name="ec81">18EC81 :</string>
    <string name="xx82x">18XX82X :</string>
    <string name="ecp83">18ECP83 :</string>
    <string name="ecs84">18ECS84 :</string>
    <string name="eci85">18ECI85 :</string>
    <string name="cs32">18CS32 :</string>
    <string name="cs33">18CS33 :</string>
    <string name="cs34">18CS34 :</string>
    <string name="cs35">18CS35 :</string>
    <string name="cs36">18CS36 :</string>
    <string name="csl37">18CSL37 :</string>
    <string name="csl38">18CSL38 :</string>
    <string name="cs42">18CS42 :</string>
    <string name="cs43">18CS43 :</string>
    <string name="cs44">18CS44 :</string>
    <string name="cs45">18CS45 :</string>
    <string name="cs46">18CS46 :</string>
    <string name="csl47">18CSL47 :</string>
    <string name="csl48">18CSL48 :</string>
    <string name="cs51">18CS51 :</string>
    <string name="cs52">18CS52 :</string>
    <string name="cs53">18CS53 :</string>
    <string name="cs54">18CS54 :</string>
    <string name="cs55">18CS55 :</string>
    <string name="cs56">18CS56 :</string>
    <string name="csl57">18CSL57 :</string>
    <string name="csl58">18CSL58 :</string>
    <string name="is61">18IS61 :</string>
    <string name="is62">18IS62 :</string>
    <string name="cs61">18CS61 :</string>
    <string name="cs62">18CS62 :</string>
    <string name="cs63">18CS63 :</string>
    <string name="cs64x">18CS64X :</string>
    <string name="cs65x">18CS65X :</string>
    <string name="isl66">18ISL66 :</string>
    <string name="isl67">18ISL67 :</string>
    <string name="csl66">18CSL66 :</string>
    <string name="csl67">18CSL67 :</string>
    <string name="csmp68">18CSMP68 :</string>
    <string name="cs71">18CS71 :</string>
    <string name="cs72">18CS72 :</string>
    <string name="cs73x">18CS73X :</string>
    <string name="cs74x">18CS74X :</string>
    <string name="cs75x">18CS75X :</string>
    <string name="csl76">18CSL76 :</string>
    <string name="csp77">18CSP77 :</string>
    <string name="cs81">18CS81 :</string>
    <string name="cs82x">18CS82X :</string>
    <string name="csp83">18CSP83 :</string>
    <string name="css84">18CSS84 :</string>
    <string name="csi85">18CSI85 :</string>
    <string name="ME32">18ME32 :</string>
    <string name="ME33">18ME33 :</string>
    <string name="ME34">18ME34 :</string>
    <string name="ME35">18ME35 :</string>
    <string name="ME36">18ME36 :</string>
    <string name="MEL37">18MEL37 :</string>
    <string name="MEL38">18MEL38 :</string>
    <string name="ME42">18ME42 :</string>
    <string name="ME43">18ME43 :</string>
    <string name="ME44">18ME44 :</string>
    <string name="ME45">18ME45 :</string>
    <string name="ME46">18ME46 :</string>
    <string name="MEL47">18MEL47 :</string>
    <string name="MEL48">18MEL48 :</string>
    <string name="ME51">18ME51 :</string>
    <string name="ME52">18ME52 :</string>
    <string name="ME53">18ME53 :</string>
    <string name="ME54">18ME54 :</string>
    <string name="ME55">18ME55 :</string>
    <string name="ME56">18ME56 :</string>
    <string name="MEL57">18MEL57 :</string>
    <string name="MEL58">18MEL58 :</string>
    <string name="ME61">18ME61 :</string>
    <string name="ME62">18ME62 :</string>
    <string name="ME63">18ME63 :</string>
    <string name="ME64X">18ME64X :</string>
    <string name="ME65X">18ME65X :</string>
    <string name="MEL66">18MEL66 :</string>
    <string name="MEL67">18MEL67 :</string>
    <string name="MEMP68">18MEMP68 :</string>
    <string name="ME71">18ME71 :</string>
    <string name="ME72">18ME72 :</string>
    <string name="ME73X">18ME73X :</string>
    <string name="ME74X">18ME74X :</string>
    <string name="ME75X">18ME75X :</string>
    <string name="MEL76">18MEL76 :</string>
    <string name="MEL77">18MEL77 :</string>
    <string name="MEP78">18MEP78 :</string>
    <string name="ME81">18ME81 :</string>
    <string name="ME82X">18ME82X :</string>
    <string name="MEP83">18MEP83 :</string>
    <string name="MME84">18MME84 :</string>
    <string name="MEI85">18MEI85 :</string>
    <string name="ee32">18EE32 :</string>
</resources>