<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/search"
        android:icon="@drawable/search"
        android:id="@+id/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:title="@string/filter"
        android:icon="@drawable/filter"
        android:id="@+id/filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sem3"
                android:title="@string/sem3"/>
            <item
                android:id="@+id/sem4"
                android:title="@string/sem4"/>
            <item
                android:id="@+id/sem5"
                android:title="@string/sem5"/>
            <item
                android:id="@+id/sem6"
                android:title="@string/sem6"/>
            <item
                android:id="@+id/sem7"
                android:title="@string/sem7"/>
            <item
                android:id="@+id/sem8"
                android:title="@string/sem8"/>
        </menu>
    </item>
</menu>