<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/log_in" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:inputType="textEmailAddress|textNoSuggestions"/>

        <EditText
            android:id="@+id/userUSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usn"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:maxLength="10"
            android:inputType="textNoSuggestions"/>


        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logIn" />
        <TextView
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newToOurApp"
            android:textAlignment="viewEnd"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>